# AI-Studio-Community

./: .gitignore  AGENTS.md  README.md
backend/: .env.development  .env.production  .env.test  CLAUDE.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py  models.py
backend/alembic/versions/: 0d05ffe676a0_rename_rerank_model_type_to_provider.py  2026_04_03_0001_initial_schema.py  2026_04_03_0002_remove_chunk_index.py  2026_04_03_0003_remove_chunk_mode_retrieval_mode.py  2026_04_06_0001_create_agent_tables.py  2026_04_08_0001_add_agent_mcp_servers_table.py  2026_04_08_0002_add_agent_configs_and_snapshot.py  2026_04_09_0001_add_stdio_columns_to_agent_mcp_servers.py  8d717dcde415_add_updated_at_to_agent_messages_and_.py  90f5c8a7e2b1_add_is_dimensionable_to_embedding_models.py  a0e39394ac41_add_agent_runs_table_and_phase_2_columns.py  b96bcc268480_init.py  d7cc0b95c3d3_fix_kb_embedding_fk_to_embedding_models.py  e63d93c3f9e2_add_knowledge_base_tables.py
backend/app/: main.py
backend/app/api/v1/: routers.py
backend/app/common/: base.py  exceptions.py  logger.py  responses.py  storage.py
backend/app/core/: middlewares.py  security.py  settings.py
backend/app/dependencies/: __init__.py  auth.py  pagination.py  repositories.py  services.py  storage.py
backend/app/dependencies/infras/: __init__.py  cache.py  database.py
backend/app/modules/agent/: __init__.py  agent.py  agent_factory.py  config_loader.py  domain.py  enums.py  models.py  repository.py  router.py  schema.py  service.py  tool_builder.py
backend/app/modules/auth/: repository.py  router.py  schema.py  service.py
backend/app/modules/embedding_model/: __init__.py  models.py  repository.py  router.py  schema.py  service.py
backend/app/modules/knowledge_base/: __init__.py  models.py  repository.py  router.py  schema.py  service.py  service_factory.py
backend/app/modules/llm_model/: __init__.py  models.py  repository.py  router.py  schema.py  service.py
backend/app/modules/rerank_model/: __init__.py  models.py  repository.py  router.py  schema.py  service.py
backend/app/modules/users/: models.py  repository.py  router.py  schema.py  service.py
backend/app/services/: __init__.py
backend/app/services/agent/: __init__.py  core.py  factories.py  prompt_builder.py  react_agent.py  simple_agent.py
backend/app/services/factory/: __init__.py  (+1 more)
backend/app/utils/: aiohttp_session.py  datetime_utils.py  encrypt_utils.py  lru_cache.py
backend/tests/: conftest.py
backend/tests/e2e/: test_agent_flow.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agent_review_fixes.py  test_mcp_smoke.py  test_mcp_smoke_script.py
backend/tests/utils/: sse.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
(+219 files in other folders)
