[package]
name = "ai-studio-community-frontend"
version = "0.1.0"
description = "AI Studio Community desktop shell"
authors = ["lining"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
